# common_language

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  pyproject.toml
common_language/: __init__.py  convert_spellings.py
tests/data/: american_contents_1.py  british_contents_1.py
