[tool.poetry]
name = "common_language"
version = "0.1.0"
description = "Common Language: A tool to standardise language within code for multi-national teams."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
flake8 = "^3.8.4"

[tool.poetry.scripts]
common_language = 'common_language:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
